# Conversation

./: CMakeLists.txt  README.md  build.sh  conanfile.py
linking/include/: README.md
linking/lib/: README.md
